new messagenew messagenew messagenew messagenew messagenew messagenew messagenew messagenew messagenew messagenew message

--- a/Final Project_Fall2021.ipynb
+++ b/Final Project_Fall2021.ipynb
@@ -339,10 +339,11 @@
    "source": [
     "### Preliminaries\n",
     "\n",
-    "#### 1. Download CSV version of dataset-1 and put it into the same folder as this notebook: https://raw.githubusercontent.com/sgurvich83/dse200project/main/Historical_Skier_Days_1979_2021.csv\n",
-    "#### 2. Download the set of pre-downloaded and preprocessed CSV files (dataset-2). After uncompressing it, the csv files should be in 'downloaded_weather_data' folder: https://raw.githubusercontent.com/sgurvich83/dse200project/main/downloaded_weather_data.zip\n",
+    "#### The notebook contains explanation and the code for downloading data from the NOAA API and transform it into final CSV files. This is done in several steps and very time-consuming because of the nature of NOAA API. That's why the zip file is provided with pre-processed csv files:\n",
     "\n",
-    "#### 3. For the second dataset the notebook contains explanation and code how to download data from the API and transform it to files in downloaded_weather_data.zip. This is very time-consuming because of the nature of NOAA API, that's why the zip file is provided. The data injection of this data is in section [C. Inject Data](#ii_1_2_C)."
+    "#### 1. Download zip file: https://raw.githubusercontent.com/sgurvich83/dse200project/main/datasets.zip\n",
+    "\n",
+    "#### 2. Uncompress file in the same folder as this notebook. The csv files should be inside 'datasets' folder."
    ]
   },
   {
