--- a/Final Project_Fall2021.ipynb
+++ b/Final Project_Fall2021.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
    "source": [
     "# create folder to save final states weather data\n",
     "if not weather_data_ready:\n",
-    "    !mkdir final_weather_data"
+    "    !mkdir datasets"
    ]
   },
   {
